--- a/validate/validator.html
+++ b/validate/validator.html
@@ -2,31 +2,28 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
-<script src="https://code.jquery.com/jquery-1.11.3.js"></script>
-<script src="validate.js"></script>
+<title>positive number</title>
+<script src="../jquery-1.12.3.min.js"></script>
+<script src="jq_validate.js"></script>
 <script type="text/javascript">
 $(function (){
-	$("#positive-number-btn").click(function (){
-		var v = $("#positive_number").val();
-		alert(/^[+]?([0-9]+(?:[\.][0-9]*)?|\.[0-9]+)$/g.test(v));
-		$("#positive_number").focus();
+	$("#positive_number").myvalidate({
+		filter_type: "positiveNumber", 
+		enterCallback: function (obj){
+			//enter key callback
+			alert(parseFloat(obj.val()));
+		}, valCallback: function (val){
+			//pressup callback,  return value
+			$("div").html(val);
+		}
 	});
+	$("#positive_number").focus();
 });
-
-/*
-大于0的正则匹配
-匹配：
-0.1
-1.
-3.0
-.1
-*/
-console.log(/^(0*\.?[1-9]\d*|[1-9]+(\d*\.\d*)?)$/.test("2."));
 </script>
 </head>
 <body>
-<input id="positive_number" />
-<button id="positive-number-btn">验证</button>
+<input id="positive_number" placeholder="input positive number" />
+<br/>result:
+<div></div>
 </body>
 </html>
