--- a/date/validate_date_time.html
+++ b/date/validate_date_time.html
@@ -6,7 +6,7 @@
     <title>验证时间</title>
     <script type="text/javascript">
         function validateDateTime(testdate) {
-            var date_regex = /((19|20)[0-9]{2})-(0?[1-9]|1[012])-(0?[1-9]|[12][0-9]|3[01]) ([01]?[0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]/;
+            var date_regex = /((19|20)[0-9]{2})-(0?[1-9]|1[012])-(0?[1-9]|[12][0-9]|3[01]) ([01]?[0-9]|2[0-3]):[0-5]?[0-9]:[0-5]?[0-9]/;
             var res = date_regex.test(testdate);
             if(res) {
                 var ymd = testdate.match(/(\d{4})-(\d+)-(\d+).*/);
