修改补0方法的定义

--- a/date/format_date.html
+++ b/date/format_date.html
@@ -21,7 +21,7 @@
             if (date == null) {
                 return "";
             }
-            var pad = (n) =>  {
+            var pad = function(n) {
                 return n < 10 ? '0' + n : n;
             }
             var year = date.getFullYear();
